added part of orion constellation article

--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+	<head>
+		<title>Discover the Night Sky</title>
+		<!-- link to main stylesheet --
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		-->
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a class="active" href="index.html">Main</a></li>
+	        	<li><a href="about.html">About</a></li>
+    		</ul>
+		</nav>
+		<div class="wrapper">
+    		<header>
+    			<h1>Discover the Night Sky</h1>
+    			<h3><i>A Practical Guide to Learning the Constellations in the Northern Hemisphere</i></h3>
+    		</header>
 
-</body>
+    		<section>
+    			<article>
+    				<header>
+    					<h2>Orion</h2>
+    					<h4>A knealing hunter with his sword at his side, the arrogant son of Poseidon.</h4>
+    				</header>
+
+    				<h3>How to Find It</h3>
+					<p>Orion's Belt can be most easily distinguished by a line of three evenly spaced stars (Orion's "belt"), with an smaller line of three stars at an angle to these (Orion's "sword").</p>
+    				<img src="img/orion.jpg">
+    				<p>The direction of these stars will vary depending on the season, which is why it is crucial to learn to recognize the two lines of three in relation to each other.</p>
+    				<img src="img/orion2.jpg">
+    				<p>The surrounding stars complete the constellation of Orion, four major ones which form a sort of diamond around Orion's Belt.</p>
+
+    				<h3>Orion's Story</h3>
+    				<img src="img/orion3.jpg">
+    				<p></p>
+
+    				<h3>Orienting Yourself</h3>
+
+    			</article>
+    		</section>
+		</div><!-- /.wrapper -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:liamardo4@gmail.com">email</a></li>
+        		<li><a href="https://github.com/liamardo4">My Github</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
